# azure-ai-cloud

./: README.md
python/a2a-prompt-runner-py/: .gitignore  poe_tasks.toml  pyproject.toml
python/a2a-prompt-runner-py/assets/examples/MultiExpertPanelAgent/: hi_and_temperature.jsonl
python/a2a-prompt-runner-py/src/a2a_prompt_runner/: __main__.py  main.py
python/a2a-prompt-runner-py/src/a2a_prompt_runner/dependency_injection/: container.py
python/a2a-prompt-runner-py/src/a2a_prompt_runner/models/: dataset.py
python/a2a-prompt-runner-py/src/a2a_prompt_runner/services/dataset_loader/: protocol.py  service.py
python/ai-evaluator-py/: .env.AZURE_AI_HUB_PROJECT.local.example  .env.local.example  .gitignore  poe_tasks.toml  pyproject.toml
python/ai-evaluator-py/assets/examples/01_turn_on_the_light/03_experiments/01/03_dataset/: conversations.jsonl
python/ai-evaluator-py/assets/examples/01_turn_on_the_light/03_experiments/01/04_evaluations/06/01_results/: evaluation_results.jsonl
python/ai-evaluator-py/assets/examples/01_turn_on_the_light/03_experiments/01/04_evaluations/06/02_formatted/: 01.json
python/ai-evaluator-py/src/ai_evaluator/: main.py
python/ai-evaluator-py/src/ai_evaluator/config/: configuration.py
python/ai-evaluator-py/src/ai_evaluator/config/os_environ/: azure_ai_hub_project.py  settings.py  utils.py
python/ai-evaluator-py/src/ai_evaluator/dependency_injection/: container.py
